--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "styled-components": "^6.1.13",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
