--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.13",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
